--- a/app/src/main/res/layout/dialog_animal_detail.xml
+++ b/app/src/main/res/layout/dialog_animal_detail.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="320dp"
@@ -20,13 +19,14 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Congratulations!"
-                android:textSize="24sp"
+                android:text="Collection Details"
+                android:textSize="20sp"
                 android:textStyle="bold"
+                android:textColor="#333333"
                 android:layout_marginBottom="16dp" />
 
             <ImageView
-                android:id="@+id/caught_animal_image"
+                android:id="@+id/detail_animal_image"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:scaleType="centerCrop"
@@ -34,7 +34,7 @@
                 android:layout_marginBottom="16dp" />
 
             <TextView
-                android:id="@+id/caught_animal_name"
+                android:id="@+id/detail_animal_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Animal Name"
@@ -43,7 +43,7 @@
                 android:layout_marginBottom="8dp" />
 
             <TextView
-                android:id="@+id/caught_animal_rarity"
+                android:id="@+id/detail_animal_rarity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Rarity"
@@ -52,7 +52,17 @@
                 android:layout_marginBottom="8dp" />
 
             <TextView
-                android:id="@+id/caught_animal_description"
+                android:id="@+id/detail_animal_region"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Found in: Region"
+                android:textSize="14sp"
+                android:textStyle="italic"
+                android:textColor="#666666"
+                android:layout_marginBottom="12dp" />
+
+            <TextView
+                android:id="@+id/detail_animal_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Description"
@@ -84,7 +94,7 @@
                         android:layout_marginBottom="4dp" />
 
                     <TextView
-                        android:id="@+id/caught_animal_fun_fact"
+                        android:id="@+id/detail_animal_fun_fact"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Fun fact goes here"
@@ -97,10 +107,10 @@
             </androidx.cardview.widget.CardView>
 
             <Button
-                android:id="@+id/continue_button"
+                android:id="@+id/close_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Continue Hunting"
+                android:text="Close"
                 android:textSize="16sp"
                 android:padding="12dp" />
 
