--- a/app/src/main/res/layout/fragment_collection.xml
+++ b/app/src/main/res/layout/fragment_collection.xml
@@ -25,6 +25,8 @@
                 android:text="My Collection"
                 android:textSize="24sp"
                 android:textStyle="bold"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="16dp"
                 android:textColor="#333333" />
 
             <TextView
