--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,6 +11,7 @@
         android:text="Profile Stats"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:layout_marginTop="14dp"
         android:layout_marginBottom="32dp" />
 
     <TextView
