--- a/app/src/main/res/layout/fragment_hunt.xml
+++ b/app/src/main/res/layout/fragment_hunt.xml
@@ -79,7 +79,7 @@
         android:drawableLeft="@drawable/ic_lure"
         android:drawablePadding="8dp"
         android:layout_marginBottom="16dp"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/lure_active_indicator"
