--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -68,7 +68,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Total Steps"
+                    android:text="Total Hunting Steps"
                     android:textSize="12sp"
                     android:textColor="@android:color/darker_gray" />
 
