--- a/app/src/main/res/layout/dialog_animal_caught_with_lure.xml
+++ b/app/src/main/res/layout/dialog_animal_caught_with_lure.xml
@@ -8,11 +8,13 @@
     app:cardElevation="8dp">
 
     <ScrollView
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxHeight="500dp">
 
         <LinearLayout
+            android:id="@+id/root_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -20,6 +22,7 @@
             android:gravity="center_horizontal">
 
             <TextView
+                android:id="@+id/congrats_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Congratulations!"
