--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="dialog_width">360dp</dimen>
+    <dimen name="streak_bubble_spacing">8dp</dimen>
 </resources>
