--- a/app/src/main/res/layout/dialog_animal_detail.xml
+++ b/app/src/main/res/layout/dialog_animal_detail.xml
@@ -71,6 +71,7 @@
                 android:text="Description"
                 android:textSize="14sp"
                 android:textAlignment="center"
+                android:textIsSelectable="true"
                 android:layout_marginBottom="12dp" />
 
             <androidx.cardview.widget.CardView
@@ -121,13 +122,6 @@
 
             </androidx.cardview.widget.CardView>
 
-            <Button
-                android:id="@+id/close_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Close"
-                android:textSize="16sp"
-                android:padding="12dp" />
 
         </LinearLayout>
 
